unpackaged/main/default/objects/Inventory__c/fields/Item__c.field-meta.xml
<CustomField>
    <fullName>Item__c</fullName>
    <label>Item</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Inventory_Item</valueSetName>
    </valueSet>
</CustomField>