unpackaged/main/default/objects/Inventory__c/fields/Location_or_User__c.field-meta.xml
<CustomField>
    <fullName>Location_or_User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Ship from Location or Salesperson</description>
    <label>Location or User</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Inventory (Location or User)</relationshipLabel>
    <relationshipName>Inventory</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>