unpackaged/main/default/objects/Inventory__c/fields/PO_Date_Expected__c.field-meta.xml
<CustomField>
    <fullName>PO_Date_Expected__c</fullName>
    <label>PO Date Expected</label>
    <type>Date</type>
</CustomField>