unpackaged/main/default/objects/Inventory__c/fields/PO_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>PO_Vendor_Name__c</fullName>
    <label>PO Vendor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>