unpackaged/main/default/objects/Inventory__c/fields/Quantity_on_PO__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_PO__c</fullName>
    <label>Quantity on PO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>