unpackaged/main/default/objects/Inventory__c/fields/Quantity_Out__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Out__c</fullName>
    <label>Quantity Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>