unpackaged/main/default/objects/Inventory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Item__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Location_or_User__c</columns>
    <columns>Account__c</columns>
    <columns>Quantity_In__c</columns>
    <columns>Quantity_Out__c</columns>
    <columns>Quantity_on_PO__c</columns>
    <columns>PO_Vendor_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>